--- a/2025_CNMAC/refs.bib
+++ b/2025_CNMAC/refs.bib
@@ -1,4 +1,12 @@
-
+@misc{souza2023,
+      title={A Comparison of Image and Scalar-Based Approaches in Preconditioner Selection}, 
+      author={Michael Souza and Luiz M. Carvalho and Douglas Augusto and Jairo Panetta and Paulo Goldfeld and José R. P. Rodrigues},
+      year={2023},
+      eprint={2312.15747},
+      archivePrefix={arXiv},
+      primaryClass={math.NA},
+      url={https://arxiv.org/abs/2312.15747}, 
+}
 @article{balaprakash2018autotuning,
   title={Autotuning in high-performance computing applications},
   author={Balaprakash, Prasanna and Dongarra, Jack and Gamblin, Todd and Hall, Mary and Hollingsworth, Jeffrey K and Norris, Boyana and Vuduc, Richard},
